reworked requests to take auth in consideration
